# research

./: README.md  pyproject.toml
docs/: 발표짜임새.md
notebooks/: background-removal.ipynb  colored.ipynb  colored.py  lab.py  not_colored.ipynb  plotting.ipynb
src/: app.py
src/core/: color.py  detectors.py  enums.py  fft.py  filters.py  normalizers.py  segmentations.py
src/core/algorithms/: normalizations.py
