[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Hepheir <hepheir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.7.0.72"
colorgram-py = "^1.2.0"
pillow = "^9.5.0"
webcolors = "^1.13"
numpy = "^1.24.3"
opencv-contrib-python = "^4.7.0.72"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.2"
matplotlib = "^3.7.1"
notebook = "^6.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
